<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abort">Abort</string>
    <string name="aborted_recipe">Recipe not completed!</string>
    <string name="added_hop">Hops got added!</string>
    <string name="added_hopping">Hopping got added!</string>
    <string name="added_main_brew">Pour got added!</string>
    <string name="added_malt">Malt got added!</string>
    <string name="added_rest">Rest got added!</string>
    <string name="added_yeast">Yeast got added!</string>
    <string name="along">Resume</string>
    <string name="amount">Amount</string>
    <string name="app_name">Brauport</string>
    <string name="back_text">Back</string>
    <string name="back_to_main_menu_text">Back to Main Menu</string>
    <string name="brauport_brew">Brauport - Brew</string>
    <string name="brauport_brew_history">Brauport - Brew History</string>
    <string name="brauport_hop">Brauport - Hops Stock</string>
    <string name="brauport_main_menu">Brauport - Main Menu</string>
    <string name="brauport_malt">Brauport - Malt Stock</string>
    <string name="brauport_recipe_details">Brauport - Recipe Details</string>
    <string name="brauport_recipes">Brauport - Recipes</string>
    <string name="brauport_yeast">Brauport - Yeast Stock</string>
    <string name="brew_text">Pour</string>
    <string name="brew_with_subtracting_stock">Brew wort, subtract off stock</string>
    <string name="brew_without_subtracting_stock">Brew wort, brew and don\'t subtract off stock</string>
    <string name="channel_name">Brew history notification channel</string>
    <string name="channel_description">Informs whenever a fermentation has finished</string>
    <string name="change_in_stock_text">Change in inventory detected. Please update your recipe!</string>
    <string name="choose_another_recipe">Please choose another recipe!</string>
    <string name="choose_hop">Please choose hop first!</string>
    <string name="confirm">Confirm</string>
    <string name="counter_dummy_text">1</string>
    <string name="created_recipe">Recipe has been created!</string>
    <string name="date_dummy">DD-MM-YYYY</string>
    <string name="date_of_completion">Date of completion:</string>
    <string name="delete_item">Remove</string>
    <string name="delete_item_text">Do you want to remove?</string>
    <string name="deleted_hop">Hops got deleted!</string>
    <string name="deleted_hopping">Hopping got deleted!</string>
    <string name="deleted_malt">Malt got deleted!</string>
    <string name="deleted_rest">Rest got deleted!</string>
    <string name="deleted_yeast">Yeast got deleted!</string>
    <string name="done_text">Done</string>
    <string name="dummy_text">Test</string>
    <string name="end_brewing">Finish Brewing</string>
    <string name="enter_end_of_fermentation">Please enter the end of fermentation!</string>
    <string name="enter_name">Please enter a name!</string>
    <string name="enter_recipe_name">Please enter a recipe name!</string>
    <string name="enter_time">Please enter a time!</string>
    <string name="fill_all_fields">Please fill in all fields!</string>
    <string name="fill_amount">Please specify quantity!</string>
    <string name="finished_recipe">Recipe got finished!</string>
    <string name="first_brew">First Pour</string>
    <string name="first_brew_with">"Main pour: First pour with</string>
    <string name="for_text">for</string>
    <string name="grinding_malt">Grinding Malt</string>
    <string name="heat_to_about_temperature">Heat to around</string>
    <string name="hop_exists">Hops exists!</string>
    <string name="hop_not_found">Hops not found!</string>
    <string name="hopping">Hopping</string>
    <string name="hopping_not_found">Hopping not found!</string>
    <string name="inspect_end_of_fermentation">End of fermentation:</string>
    <string name="instruction_b_text">Please select a recipe to generate brewing instructions. After completing a step, the state should change from \"Open\" to \"Done\". Only when all steps have been completed can you complete the brewing process and indicate the end of fermentation. Please note that a timer can be set by clicking on a corresponding item, e.g. a rest. Use this feature to accurately measure any times.</string>
    <string name="instruction_brew">Instruction - Pour</string>
    <string name="instruction_r_text">Please create your recipes here by clicking on the \"+ New Recipe\"-button and enter the name and other attributes of your recipe. You can click on the corresponding recipe to view its data and change it later. Use the search function to find your recipe and to change. By clicking on the \"x\"-button the recipe will be deleted. Please note that if you change your stock, the recipe may also need to be updated! You can use the \"Refresh\"-button to remove all stock items from the list and filter the respective list. Please also note that the names of the recipes are not unique! Therefore, use the search function to find out whether your recipe is already available before you create a new recipe!</string>
    <string name="instruction_recipe">Instruction - Recipe:</string>
    <string name="instruction_s_text">Please enter your entire stock here by pressing the \"+ New *\"-button and enter the name and quantity of your item. You can subsequently view the data of the relevant stock item by clicking on it. Use the search function to find and change your stock item. By clicking on the \"x\"-button the stock item is deleted. Please note that the names of the stock items are not unique! So search whether your stock item already exists before you create a new item!</string>
    <string name="instruction_stock">Instruction - Stock:</string>
    <string name="invalid_date">Date is invalid!</string>
    <string name="item_close">End</string>
    <string name="item_main_screen">Main Menu</string>
    <string name="let_it_cool_down">Let it cool down</string>
    <string name="main_brew">Main Pour</string>
    <string name="main_brew_history">Brewing History</string>
    <string name="main_recipes_button">Recipes</string>
    <string name="make_recipe">Please create a recipe!</string>
    <string name="malt_exists">Malt exists!</string>
    <string name="malt_not_found">Malt not found!</string>
    <string name="malts">Malts</string>
    <string name="name">Name</string>
    <string name="new_hop">New Hops</string>
    <string name="new_malt">New Malt</string>
    <string name="new_yeast">New Yeast</string>
    <string name="no_ingredients_added">No ingredients have been added yet!</string>
    <string name="no_text">No</string>
    <string name="no_time_chosen">No time was chosen!</string>
    <string name="notification_text">The fermentation of %1$s is finished</string>
    <string name="notification_title">Fermentation completed</string>
    <string name="only_one_yeast_per_recipe">Only one yeast per recipe possible!</string>
    <string name="open_text">Open</string>
    <string name="pipeing">Piping</string>
    <string name="recipe_add">New Recipe</string>
    <string name="recipe_inspect_name">Recipe Name</string>
    <string name="refresh_list">Ingredients list got refreshed</string>
    <string name="refresh_text">Refresh</string>
    <string name="remove_malt">Remove Malt</string>
    <string name="rest">Rests</string>
    <string name="rest_not_found">Rest not found!</string>
    <string name="save_string">Save</string>
    <string name="search_string">Search</string>
    <string name="second_brew">Second Pour</string>
    <string name="second_brew_with">and second pour with</string>
    <string name="set_all_attributes">Please set all attributes!</string>
    <string name="start_brew_timer">Start</string>
    <string name="stock_text">Stock</string>
    <string name="stop_brew_timer">Stop</string>
    <string name="temp">Temperature</string>
    <string name="time">Time</string>
    <string name="time_dummy">00:00</string>
    <string name="timer_already_running">Timer is already running!</string>
    <string name="unit_of_measurement_grams">g</string>
    <string name="unit_of_measurement_milliliters">ml</string>
    <string name="unit_of_measurement_temp">°C</string>
    <string name="unit_of_measurement_time">min</string>
    <string name="updated_date">Date got updated!</string>
    <string name="updated_recipe">Recipe has been updated!</string>
    <string name="warning">!!! Warning !!!</string>
    <string name="warning_dialog_text">Please note that elements may not be displayed correctly on devices with a lower resolution than 480x800px! You can still use this app, but a minimum resolution of 480x800 is recommended for all elements to display correctly.</string>
    <string name="warning_text">!!! Warning !!!\nThere is not enough ingredients in stock. If you do carry out this recipe now, then stocks will become negative!</string>
    <string name="yeast">Yeast</string>
    <string name="yeast_not_found">Yeast not found!</string>
    <string name="yes_text">Yes</string>
</resources>