<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/InstructionTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.DialogRecipeInspectFragment">

    <TextView
        android:id="@+id/recipe_name"
        style="@style/TextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/recipe_inspect_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recipe_name"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/malts"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/malts"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rests"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rest"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hopping"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hopping"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/yeast"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/yeast"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_brew"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_brew"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_of_completion"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_completion"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/end_of_fermentation"
                style="@style/TextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/inspect_end_of_fermentation"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/back_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view"
        android:text="@string/back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>