<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBars_color"
    android:padding="10dp"
    tools:context=".ui.dialog.DialogRestFragment">

    <EditText
        android:id="@+id/rest_temp"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/temp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/rest_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/rest_time"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/time"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toStartOf="@+id/unit_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_temp">

    </EditText>

    <TextView
        android:id="@+id/unit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_of_measurement_time"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/rest_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rest_time" />

    <TextView
        android:id="@+id/unit_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_of_measurement_temp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/rest_temp"
        app:layout_constraintStart_toStartOf="@+id/unit_time"
        app:layout_constraintTop_toTopOf="@+id/rest_temp" />

    <Button
        android:id="@+id/rest_confirm_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_time" />

    <Button
        android:id="@+id/rest_delete_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_time" />

    <Button
        android:id="@+id/rest_back_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_delete_button" />

</androidx.constraintlayout.widget.ConstraintLayout>