<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.RecipeDetailsFragment">

    <Button
        android:id="@+id/malts"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/malts"
        app:layout_constraintBottom_toTopOf="@+id/rests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_button" />

    <Button
        android:id="@+id/rests"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/rest"
        app:layout_constraintBottom_toTopOf="@+id/hopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/malts" />

    <Button
        android:id="@+id/hopping"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/hopping"
        app:layout_constraintBottom_toTopOf="@+id/yeast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rests" />

    <Button
        android:id="@+id/yeast"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/yeast"
        app:layout_constraintBottom_toTopOf="@+id/main_brew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hopping" />

    <Button
        android:id="@+id/main_brew"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/main_brew"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yeast" />

    <Button
        android:id="@+id/save_button"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/save_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_brew" />

    <Button
        android:id="@+id/inspect_button"
        style="@style/IconButtonTheme"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>