<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <Button
        android:id="@+id/recipes_button"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/main_recipes_button"
        app:layout_constraintBottom_toTopOf="@+id/brew_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_button" />

    <Button
        android:id="@+id/stock_button"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/stock_text"
        app:layout_constraintBottom_toTopOf="@+id/recipes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brew_button"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/brew_text"
        app:layout_constraintBottom_toTopOf="@+id/brew_history_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_button" />

    <Button
        android:id="@+id/brew_history_button"
        style="@style/ButtonTheme"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/main_brew_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brew_button" />

</androidx.constraintlayout.widget.ConstraintLayout>