<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBars_color"
    android:padding="10dp"
    tools:context=".ui.dialog.DialogMainBrewFragment">

    <EditText
        android:id="@+id/first_pour"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/main_brew"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="20"
        app:layout_constraintEnd_toStartOf="@+id/milliliters_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/second_pour"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/second_brew"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="20"
        app:layout_constraintEnd_toStartOf="@+id/milliliters_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_pour">

    </EditText>

    <TextView
        android:id="@+id/milliliters_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_of_measurement_milliliters"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/second_pour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second_pour" />

    <TextView
        android:id="@+id/milliliters_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_of_measurement_milliliters"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/first_pour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_pour" />

    <Button
        android:id="@+id/abort_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/abort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_pour" />

</androidx.constraintlayout.widget.ConstraintLayout>