<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBars_color"
    android:padding="10dp"
    tools:context=".ui.dialog.DialogRecipeNameFragment">

    <EditText
        android:id="@+id/recipe_name"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <Button
        android:id="@+id/confirm_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

    <Button
        android:id="@+id/abort_button"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/abort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

</androidx.constraintlayout.widget.ConstraintLayout>