<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.DialogHoppingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/r_hopping_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="190dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r_hopping_time_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/r_hopping_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/r_hopping_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="number"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/r_hopping_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm"
        android:textColor="@color/appBars_color"
        android:textSize="15sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/r_hopping_refresh_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/r_hopping_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/delete_item"
        android:textColor="@color/appBars_color"
        android:textSize="15sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/r_hopping_back_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/r_hopping_back_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back_text"
        android:textColor="@color/appBars_color"
        android:textSize="15sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/r_hopping_refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/refresh_text"
        android:textColor="@color/appBars_color"
        android:textSize="15sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>